// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component | ChapterCard.vue template should match snapshot 1`] = `
<article class="chapter">
  <header class="chapter__header">
    <h2 class="chapter__title">
      My title
    </h2>
    <p class="chapter__position">
      82
    </p>
  </header>
  <div class="chapter__content"><img src="webf" alt="An image showing Title of the first paragraph" rel="noreferrer" class="chapter__image"></div>
  <footer class="chapter__footer">
    <div class="chapter__footer_text">
      <p>
        Title of the first paragraph
      </p>
    </div>
    <div class="chapter__footer_text">
      <p><a href="https://github.com/trollepierre" rel="noreferrer" target="_blank">
          https://github.com/trollepierre
        </a></p>
    </div>
    <div class="chapter__footer_text">
      <p>
        url
      </p>
    </div>
    <div class="chapter__footer_text"><iframe width="512" height="288" src="https://www.youtube.com/embed/-18AYp_7iW0?rel=0&amp;modestbranding=1" allow="accelerometer; encrypted-media; gyroscope;" allowfullscreen="allowfullscreen" class="youtube-iframe"></iframe></div>
  </footer>
</article>
`;

exports[`Component | ChapterCard.vue template should match snapshot when imgLink is not set 1`] = `
<article class="chapter">
  <header class="chapter__header">
    <h2 class="chapter__title">
      My title
    </h2>
    <p class="chapter__position">
      82
    </p>
  </header>
  <div class="chapter__content">
    <div class="missing-image" style="height: 288px;">
      Missing image
    </div>
  </div>
  <footer class="chapter__footer">
    <div class="chapter__footer_text">
      <p>
        Title of the first paragraph
      </p>
    </div>
    <div class="chapter__footer_text">
      <p><a href="https://github.com/trollepierre" rel="noreferrer" target="_blank">
          https://github.com/trollepierre
        </a></p>
    </div>
    <div class="chapter__footer_text">
      <p>
        url
      </p>
    </div>
    <div class="chapter__footer_text"><iframe width="512" height="288" src="https://www.youtube.com/embed/-18AYp_7iW0?rel=0&amp;modestbranding=1" allow="accelerometer; encrypted-media; gyroscope;" allowfullscreen="allowfullscreen" class="youtube-iframe"></iframe></div>
  </footer>
</article>
`;
